tests/snapshots/spanshot_request@8085660212046429571.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `&[[&mut x]]: &[&mut [T]]`

&[[&mut x]] @ p: &[&mut [T]]
// Applying rule `Deref`
[[&mut x]] @ *p: [&mut [T]]
// Applying rule `Constructor`
[&mut x] @ (*p).0: &mut [T]
// Applying rule `ConstructorRef`
&mut x @ &mut (*(*p).0).0: &mut T
// Applying rule `Deref`
x @ *&mut (*(*p).0).0: T
// Applying rule `ExprSimplification`
x @ (*(*p).0).0: T

// Final bindings:
let x: T = (*(*p).0).0
