tests/snapshots/spanshot_request@812607087544437815.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[x]: &mut &[T]`

[x] @ p: &mut &[T]
// Applying rule `ConstructorMultiRef`
[x] @ *p: &[T]
// Applying rule `ConstructorRef`
x @ &(**p).0: &T

// Final bindings:
let x: &T = &(**p).0
