tests/snapshots/spanshot_request@8140627612983446823.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `&x: &T`

&x @ p: &T
// Applying rule `Deref`
x @ *p: T

// Final bindings:
let x: T = *p
