tests/snapshots/spanshot_request@8202278207659258794.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: Skip
    mut_binding_on_inherited: Error
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: true
  bundle_name: ergo2024
  request: "&[x]: &[&mut T]"
---
&[x] @ p: &[&mut T]
// Applying rule `Deref`
[x] @ *p: [&mut T]
// Applying rule `Constructor`
x @ (*p).0: &mut T

// Final bindings (simplified):
let x: &mut T = (*p).0 // Borrow-check error: CantCopyRefMut
